--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "engines": {
     "node": "0.12.0",
-    "npm": "2.5.1",
+    "npm": "2.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
