--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-validation-match": "~1.4.1",
     "angularjs-ordinal-filter": "*",
     "ng-file-upload": "~4.2.1",
-    "ng-imgur": "~0.1.5"
+    "ng-imgur": "~0.1.5",
+    "angular-mocks": "~1.3.15"
   }
 }
