--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,10 @@
     "angularjs-ordinal-filter": "*",
     "ng-file-upload": "~4.2.1",
     "ng-imgur": "~0.1.5",
-    "angular-mocks": "~1.3.15"
+    "angular-mocks": "~1.3.15",
+    "mockfirebase": "~0.11.0"
+  },
+  "devDependencies": {
+    "bardjs": "~0.1.3"
   }
 }
