--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jshint-stylish": "^1.0.2",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.10",
-    "karma-jasmine": "^0.3.5"
+    "karma-jasmine": "^0.3.5",
+    "mockfirebase": "^0.11.0"
   }
 }
